--- a/.github/workflows/RDP-AP.yml
+++ b/.github/workflows/RDP-AP.yml
@@ -9,38 +9,35 @@ jobs:
     timeout-minutes: 10000
 
     steps:
-    - name: Download Ngrok & NSSM
+    - name: Download neccessary executables
       run: |
         Invoke-WebRequest https://link.qthang.net/windows-rdp/ngrok.exe -OutFile ngrok.exe
         Invoke-WebRequest https://link.qthang.net/windows-rdp/nssm.exe -OutFile nssm.exe
-    - name: Copy NSSM & Ngrok to Windows Directory.
+    - name: Copy to Windows Directory.
       run: | 
         copy nssm.exe C:\Windows\System32
         copy ngrok.exe C:\Windows\System32
-    - name: Connect your NGROK account
+    - name: Ngrok authtoken
       run: .\ngrok.exe authtoken 257vae5oyT0Fqv6rOvmflHMXjuP_7JzgFUu743LFxiFRWNqni
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Download Important Files.
+    - name: Download Files
       run: |
         Invoke-WebRequest https://raw.githubusercontent.com/thip2618/backup/main/NGROK-AP.bat -OutFile NGROK-AP.bat
         Invoke-WebRequest https://raw.githubusercontent.com/Greenn7838/vpstst/main/check.bat -OutFile check.bat
         Invoke-WebRequest https://raw.githubusercontent.com/Greenn7838/Butter-s-awesome-repo/main/install.bat -OutFile install.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/thip2618/backup/main/loop.bat -OutFile loop.bat
-    - name: Make YML file for NGROK.
+    - name: Simple creation.
       run: start NGROK-AP.bat
-    - name: Enable RDP Access.
+    - name: Portal Access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - name: Create Tunnel
+    - name: Tunnel creation
       run: sc start ngrok
-    - name: Connect to your RDP 2core-7GB Ram.
+    - name: Portal connection.
       run: cmd /c check.bat
     - name: Installing some applications at D:\
       run: cmd /c install.bat
-    - name: All Done! You can close Tab now! Maximum VM time:6h.
-      run: cmd /c loop.bat 
       
     
