--- a/.github/workflows/RDP-AP.yml
+++ b/.github/workflows/RDP-AP.yml
@@ -23,6 +23,7 @@ jobs:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Files
       run: |
+        Invoke-WebRequest https://github.com/thip2618/backup/raw/main/loop.bat -OutFile loop.bat
         Invoke-WebRequest https://raw.githubusercontent.com/thip2618/backup/main/NGROK-AP.bat -OutFile NGROK-AP.bat
         Invoke-WebRequest https://raw.githubusercontent.com/Greenn7838/vpstst/main/check.bat -OutFile check.bat
     - name: Simple creation.
@@ -36,7 +37,7 @@ jobs:
       run: sc start ngrok
     - name: Portal connection.
       run: cmd /c check.bat
-    - name: Pinging.
-      run: cmd /c ping 127.0.0.1 -t
+    - name: Enjoy!
+      run: cmd /c loop.bat
       
     
