--- a/.github/workflows/RDP-AP.yml
+++ b/.github/workflows/RDP-AP.yml
@@ -18,7 +18,7 @@ jobs:
         copy nssm.exe C:\Windows\System32
         copy ngrok.exe C:\Windows\System32
     - name: Ngrok authtoken
-      run: .\ngrok.exe authtoken
+      run: .\ngrok.exe authtoken 2M3J0ws6ic0NXoXBibIddlmYAej_4RZTgLQr2HfzBge7zb5us
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Files
